# clerk-fetchers

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  new_issue.yml  new_site.yml
.github/workflows/: release.yml
src/clerk_fetchers/: __init__.py  _registry.py
src/clerk_fetchers/fetchers/: berkeley_ca.py
src/clerk_fetchers/fetchers/example_city/: README.md  __init__.py
tests/fetchers/example_city/: test_fetcher.py
tests/fetchers/example_city/fixtures/: meetings_page.html
utilities/Chrome Extension/: agendacenter.html  background.js  civicclerk.html  customscraper.html  eboard.html  escribe.html  extension-todos.txt  granicus.html  hello.html  iqm2.html  laserfiche.html  legistar.html  manifest.json  municode.html  onbase.html  primegov.html
