[project]
name = "clerk-fetchers"
version = "0.0.1"
description = "Community-contributed fetchers for clerk"
requires-python = ">=3.12"
dependencies = [
    "clerk>=0.0.1",
]

[project.entry-points."clerk.plugins"]
clerk-fetchers = "clerk_fetchers:ClerkFetchersPlugin"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "respx>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
