[project]
name = "clerk-fetchers"
dynamic = ["version"]
description = "Community-contributed fetchers for civicband-clerk"
readme = "README.md"
authors = [{ name = "Philip James", email = "phildini@phildini.net" }]
requires-python = ">=3.12"
dependencies = [
    "civicband-clerk>=0.1.1",
    "parsedatetime>=2.6",
]

[project.entry-points."clerk.plugins"]
clerk-fetchers = "clerk_fetchers:ClerkFetchersPlugin"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "respx>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/clerk_fetchers/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clerk_fetchers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
